@@ -19,14 +19,14 @@ special remote names.
   
 Some special remotes may need parameters to be specified every time they are
 enabled. For example, the directory special remote requires a directory=
-parameter.
-  
+parameter every time.
+
 This command can also be used to modify the configuration of an existing
-special remote, by specifying new values for parameters that were
-originally set when using initremote. (However, some settings such as
+special remote, by specifying new values for parameters that are
+usually set when using initremote. (However, some settings such as
 the as the encryption scheme cannot be changed once a special remote
 has been created.)
-  
+
 The GPG keys that an encrypted special remote is encrypted with can be
 changed using the keyid+= and keyid-= parameters. These respectively
 add and remove keys from the list. However, note that removing a key
@@ -44,6 +44,12 @@ encryption (encryption=pubkey), adding or removing a key has NO effect
 on files that have already been copied to the remote. Hence using
 keyid+= and keyid-= with such remotes should be used with care, and
 make little sense except in cases like the revoked key example above.
+
+If you get tired of manually enabling a special remote in each new clone,
+you can pass "autoenable=true". Then when [[git-annex-init]](1) is run in
+a new clone, it will will attempt to enable the special remote. Of course,
+this works best when the special remote does not need anything special
+to be done to get it enabled.
 
 # SEE ALSO
 
