@@ -24,6 +24,8 @@ git-annex (5.20150825) UNRELEASED; urgency=medium
     the repository to a remote.
   * Improve bash completion, so it completes names of remotes and backends
     in appropriate places.
+  * Special remotes configured with autoenable=true will be automatically
+    enabled when git-annex init is run.
 
  -- Joey Hess <id@joeyh.name>  Tue, 01 Sep 2015 14:46:18 -0700
 
